@startuml

title __UTIL's Class Diagram__\n

  namespace com.woonders.lacemsjsf.util {
    abstract class com.woonders.lacemsjsf.util.BaseConverter {
        + findBean()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    abstract class com.woonders.lacemsjsf.util.BaseValidator {
        + findBean()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    class com.woonders.lacemsjsf.util.CalculationUtils {
        {static} + JSF_NAME : String
        {static} + NAME : String
        + roundingDoubleSixPlace()
        + roundingDoubleTwoPlace()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    class com.woonders.lacemsjsf.util.CheckPermissionUtils {
        {static} + JSF_NAME : String
        {static} + NAME : String
        + isAccessibleFromOperator()
        + isAccessibleFromOperator()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    class com.woonders.lacemsjsf.util.ErrorConverter {
        {static} + JSF_NAME : String
        {static} + NAME : String
        + convertSendEmailError()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    class com.woonders.lacemsjsf.util.ExceptionResolverUtil {
        {static} + JSF_NAME : String
        {static} + NAME : String
        + getMessageToShowFromException()
        + getMessageToShowFromException()
        - getMessageToShowFromException()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    class com.woonders.lacemsjsf.util.FacesUtil {
        {static} + addMessage()
        {static} + addMessage()
        {static} + addMessage()
        {static} + closeDialog()
        {static} + doesPageNeedToBeRefreshed()
        {static} + execute()
        {static} + flashContains()
        {static} + getFromFlash()
        {static} + getSourceComponentName()
        {static} + isNotFirstRequest()
        {static} + openDialog()
        {static} + openNewWindow()
        {static} + putIntoFlash()
        {static} + redirect()
        {static} + refresh()
        {static} + refreshAfter()
        {static} + showMessageInDialog()
        {static} + update()
        {static} + updateSmsInfo()
        {static} - addMessage()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    enum DialogType {
      CONFIRM_SAVE_CALENDARIO_ALTRI_APPUNTAMENTI_PRESENTI
      DATASOURCE
      DIALOG_CONTESTA_NOMINATIVO
      FILE_LIST
      INVIA_MAIL_FATTURAZIONE
      MODIFICA_PERMESSI
      OPERATOR
      PRATICHE_DA_PERFEZIONARE
      PREVENTIVO_TRATTENUTE
      SIMULATOR_DIALOG_NOMINATIVO
      SIMULATOR_DIALOG_PREVENTIVO_CLIENTE
      value
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    enum MessageShownType {
      DETAIL
      SUMMARY
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    class com.woonders.lacemsjsf.util.HttpSessionUtil {
        {static} + JSF_NAME : String
        {static} + NAME : String
        + getAuthority()
        + getAziendaId()
        + getOperatorId()
        + getRoleNameList()
        + getUsername()
        + hasAnyAuthority()
        + hasAuthority()
        + isPrintPdfEnabled()
        + isStorageEnabled()
        - getAttributeFromSession()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    enum SessionAttribute {
      AZIENDA_ID
      PRINT_PDF_ENABLED
      ROLE_LIST
      STORAGE_ENABLED
      USERID
      USERNAME
      value
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    class com.woonders.lacemsjsf.util.PassaggioParametriUtils {
        {static} + JSF_NAME : String
        {static} + NAME : String
        - parametri : HashMap<Parametro, Object>
        + getParametri()
    }
  }
  

  namespace com.woonders.lacemsjsf.util {
    enum Parametro {
      ADVANCED_SEARCH_CLIENTI_PARAMETER
      ADVANCED_SEARCH_NOMINATIVI_PARAMETER
      AMMINISTRAZIONE_LIST
      AMMINISTRAZIONE_PDF_PARAMETER
      AMMINISTRAZIONE_PDF_SCHEDA_ATC_PARAMETER
      AMMINISTRAZIONE_VIEWMODEL_PARAMETER
      ARCHIVIAZIONE_RENDERED
      AZIENDA_PDF_PARAMETER
      CAMPAGNA_ID
      CELLULARE_CHECK_NOMINATIVO_PARAMETER
      CENSITO_NUOVA_PRATICA_PARAMETER
      CF_ANTIRICICLAGGIO_PARAMETER
      CF_CHECK_NOMINATIVO_PARAMETER
      CLIENTE_DA_CHECK_NOMINATIVO_PARAMETER
      CLIENTE_ID
      CLIENTE_NUOVA_PRATICA_PARAMETER
      CLIENTE_PDF_PARAMETER
      CLIENTE_PRATICA_ID
      CLIENTE_SELECTED_ON_SEARCH
      CLIENTE_VIEWMODEL_APPUNTAMENTO_PARAMETER
      COGNOME_CHECK_NOMINATIVO_PARAMETER
      CONTO_PDF_PARAMETER
      DATACARICAMENTO_END_ANTIRICICLAGGIO_PARAMETER
      DATACARICAMENTO_START_ANTIRICICLAGGIO_PARAMETER
      DATA_NASCITA_CHECK_NOMINATIVO_PARAMETER
      DELETE_PRATICA_LIST_PARAMETER
      DOCUMENTO_PDF_PARAMETER
      EMAIL_CHECK_NOMINATIVO_PARAMETER
      ESTINZIONE_LIST_PDF_PARAMETER
      FILE_CATEGORY
      FILE_NAME
      FISSO_CHECK_NOMINATIVO_PARAMETER
      ID_NOMINATIVO_ON_FORM_NOMINATIVO_PARAMETER
      IMPEGNI_NOMINATIVO_PDF_PARAMETER
      LIST_CLIENTE_RECALL_PARAMETER
      LIST_COESISTENZA_RINNOVABILE_PARAMETER
      LIST_IMPEGNI_NOMINATIVI_PARAMETER
      LIST_NOMINATIVI_CLIENTI_PARAMETER
      LIST_NOMINATIVI_DA_RICHIAMARE_PARAMETER
      LIST_PRATICA_RINNOVABILE_PARAMETER
      LUOGO_CHECK_NOMINATIVO_PARAMETER
      NOME_CHECK_NOMINATIVO_PARAMETER
      NOMINATIVI_CLIENTI_LIST_CHECK_NOMINATIVO_PARAMETER
      NOMINATIVO_PDF_PARAMETER
      NOMINATIVO_SELECTED_ON_SEARCH
      NOTICE_ID_TO_DISPLAY_PDF
      NOTICE_SELECTED_ID
      NOTIFICATION_CATEGORY_PARAMETER
      NUOVO_NOMINATIVO_PARAMETER
      PDF_AZIENDA_OPERATORE_ASSEGNATO_PARAMETER
      PDF_CATEGORY_PARAMETER
      PDF_LINK
      PRATICA_ID
      PRATICA_PDF_PARAMETER
      PRATICA_VIEWMODEL_APPUNTAMENTO_PARAMETER
      PRATICHE_DA_PERFEZIONARE_DATAFINE_PARAMETER
      PRATICHE_DA_PERFEZIONARE_DATAINIZIO_PARAMETER
      PRATICHE_DA_PERFEZIONARE_LIQUIDATA_PARAMETER
      PRATICHE_DA_PERFEZIONARE_LIQUIDAZIONE_PARAMETER
      PRATICHE_DA_PERFEZIONARE_PERFEZIONAMENTO_PARAMETER
      PRATICHE_DA_PERFEZIONARE_QUIETANZATA_PARAMETER
      PRATICHE_PERFEZIONATE_DATAFINE_PARAMETER
      PRATICHE_PERFEZIONATE_DATAINIZIO_PARAMETER
      PRATICHE_PERFEZIONATE_OPERATORE_PARAMETER
      PREVENTIVI_NOMINATIVO_PDF_PARAMETER
      RAGIONE_SOCIALE_PARAMETER
      RESIDENZA_PDF_PARAMETER
      RICARICA_PDF_PARAMETER
      SELECTED_FINANZIARIA
      SESSO_CHECK_NOMINATIVO_PARAMETER
      SIMULATOR_AGENT_FEES_CHOOSEN
      SIMULATOR_AMOUNT_CHOOSEN
      SIMULATOR_PAYMENT_CHOOSEN
      SIMULATOR_RESULT_ROW_CHOOSEN
      SIMULATOR_SOURCE
      SIMULATOR_TABLE_ID_PARAMETER
      SIMULATOR_TABLE_SELECTION
      SIMULATOR_TABLE_VIEW_MODEL
      SIMULATOR_TYPE_CHOOSEN
      STATO_CONTEGGIO_ESTINZIONE_PARAMETER
      STATO_NOMINATIVO_PARAMETER
      STATO_PRATICA_PARAMETER
      TENANT_ID
      TIPORICERCA_ANTIRICICLAGGIO_PARAMETER
      TIPO_ESTINZIONE_PANNELLO_STATO_CONTEGGIO_ESTINZIONE_PARAMETER
      TIPO_PRATICA_NUOVA_PRATICA_PARAMETER
      TIPO_PRATICA_PANNELLO_STATO_PRATICA_PARAMETER
    }
  }
  

  com.woonders.lacemsjsf.util.BaseConverter .up.|> javax.faces.convert.Converter
  com.woonders.lacemsjsf.util.BaseValidator .up.|> javax.faces.validator.Validator
  com.woonders.lacemsjsf.util.CheckPermissionUtils o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.util.ErrorConverter o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil
  com.woonders.lacemsjsf.util.ExceptionResolverUtil o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil
  com.woonders.lacemsjsf.util.FacesUtil +-down- com.woonders.lacemsjsf.util.FacesUtil.DialogType
  com.woonders.lacemsjsf.util.FacesUtil +-down- com.woonders.lacemsjsf.util.FacesUtil.MessageShownType
  com.woonders.lacemsjsf.util.HttpSessionUtil +-down- com.woonders.lacemsjsf.util.HttpSessionUtil.SessionAttribute
  com.woonders.lacemsjsf.util.PassaggioParametriUtils .up.|> java.io.Serializable
  com.woonders.lacemsjsf.util.PassaggioParametriUtils +-down- com.woonders.lacemsjsf.util.PassaggioParametriUtils.Parametro


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
